--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2414,16 +2414,21 @@ h3 a {
 }
 
 /* line 1838, ../sass/style.scss */
+.liveEventCollectionSection table td {
+  width: 450px;
+}
+
+/* line 1841, ../sass/style.scss */
 .lessonCollectionSection table td.active {
   background: none;
 }
 
-/* line 1841, ../sass/style.scss */
+/* line 1844, ../sass/style.scss */
 .lessonCollectionSection .view-lesson-collection span {
   display: block;
 }
 
-/* line 1847, ../sass/style.scss */
+/* line 1850, ../sass/style.scss */
 #edit-field-portion-tid-wrapper label,
 #edit-field-secondary-topic-tid-wrapper label,
 #edit-field-author-tid-wrapper label,
@@ -2436,7 +2441,7 @@ h3 a {
   text-transform: capitalize;
 }
 
-/* line 1855, ../sass/style.scss */
+/* line 1858, ../sass/style.scss */
 #courseDescription {
   float: left;
   height: 100%;
@@ -2444,7 +2449,7 @@ h3 a {
   background: #f2f1f1;
 }
 
-/* line 1864, ../sass/style.scss */
+/* line 1867, ../sass/style.scss */
 .lessonCollectionSection form select option,
 #teachingsSectionHeaderBar select option,
 #views-exposed-form-taxonomy-term-page select option,
@@ -2452,7 +2457,7 @@ h3 a {
   width: 150px;
 }
 
-/* line 1867, ../sass/style.scss */
+/* line 1870, ../sass/style.scss */
 span.lessonsCourse {
   background: url("../images/dd_arrow.png") no-repeat scroll right 10px white !important;
   border: 1px solid #cccccc;
@@ -2469,17 +2474,17 @@ span.lessonsCourse {
   z-index: 1;
 }
 
-/* line 1882, ../sass/style.scss */
+/* line 1885, ../sass/style.scss */
 .transcription .lessonsCourse, #views-exposed-form-free-lessons-page .lessonsCourse {
   display: block !important;
 }
 
-/* line 1885, ../sass/style.scss */
+/* line 1888, ../sass/style.scss */
 #views-exposed-form-free-lessons-page .views-exposed-widget {
   float: left !important;
 }
 
-/* line 1888, ../sass/style.scss */
+/* line 1891, ../sass/style.scss */
 .transcription span.lessonsCourse {
   background: url("http://cdn1.kabbalah.com/university/icons/dropdown_arrow_blue.png") no-repeat scroll 316px 10px !important;
   border: 0;
@@ -2498,7 +2503,7 @@ span.lessonsCourse {
   text-transform: uppercase;
 }
 
-/* line 1905, ../sass/style.scss */
+/* line 1908, ../sass/style.scss */
 .transcription span.lessonsCourse:before {
   content: "View Live Transcript";
   color: white;
@@ -2506,12 +2511,12 @@ span.lessonsCourse {
   text-transform: capitalize;
 }
 
-/* line 1911, ../sass/style.scss */
+/* line 1914, ../sass/style.scss */
 .transcription .form-type-select {
   margin-bottom: 9px !important;
 }
 
-/* line 1914, ../sass/style.scss */
+/* line 1917, ../sass/style.scss */
 #transcriptWrapper label {
   float: left;
   font-size: 16px;
@@ -2521,24 +2526,24 @@ span.lessonsCourse {
   padding-left: 10px;
 }
 
-/* line 1922, ../sass/style.scss */
+/* line 1925, ../sass/style.scss */
 .transcription select {
   float: none !important;
 }
 
-/* line 1925, ../sass/style.scss */
+/* line 1928, ../sass/style.scss */
 .trans-lang-select.form-select {
   width: 320px;
 }
 
-/* line 1928, ../sass/style.scss */
+/* line 1931, ../sass/style.scss */
 .lessonCollectionSection form select {
   cursor: pointer;
   height: 30px;
   padding-right: 40px;
 }
 
-/* line 1933, ../sass/style.scss */
+/* line 1936, ../sass/style.scss */
 #preReqsTitle {
   color: white;
   font-weight: normal;
@@ -2546,7 +2551,7 @@ span.lessonsCourse {
   line-height: 20px;
 }
 
-/* line 1939, ../sass/style.scss */
+/* line 1942, ../sass/style.scss */
 #preReqs a {
   color: #4dcff5;
   font-weight: normal;
@@ -2555,44 +2560,44 @@ span.lessonsCourse {
   text-transform: uppercase;
 }
 
-/* line 1946, ../sass/style.scss */
+/* line 1949, ../sass/style.scss */
 .lessonTitle {
   float: left;
   width: 450px;
 }
 
-/* line 1950, ../sass/style.scss */
+/* line 1953, ../sass/style.scss */
 .lessonRecordedDate {
   float: left;
   width: 100px;
 }
 
-/* line 1954, ../sass/style.scss */
+/* line 1957, ../sass/style.scss */
 .lessonWatchLink {
   float: left;
   width: 45px;
 }
 
-/* line 1958, ../sass/style.scss */
+/* line 1961, ../sass/style.scss */
 #contentAuthorInfo #eSocial {
   margin-top: 135px !important;
   margin-bottom: 17px !important;
   width: 440px !important;
 }
 
-/* line 1963, ../sass/style.scss */
+/* line 1966, ../sass/style.scss */
 #wrapperVideoSection #eSocial {
   margin: auto;
   width: 940px;
 }
 
-/* line 1967, ../sass/style.scss */
+/* line 1970, ../sass/style.scss */
 .sharethis {
   border-top: 1px solid #7c7575;
   padding-top: 10px;
 }
 
-/* line 1971, ../sass/style.scss */
+/* line 1974, ../sass/style.scss */
 #courseDescription #eSocial .sharethis {
   border-top: none !important;
   padding-top: 0 !important;
@@ -2601,7 +2606,7 @@ span.lessonsCourse {
   margin-right: -17px;
 }
 
-/* line 1978, ../sass/style.scss */
+/* line 1981, ../sass/style.scss */
 #language {
   float: left;
   color: #433b3a;
@@ -2610,7 +2615,7 @@ span.lessonsCourse {
   line-height: 24px;
 }
 
-/* line 1985, ../sass/style.scss */
+/* line 1988, ../sass/style.scss */
 #courseDescription #eSocial {
   margin: auto;
   width: 700px;
@@ -2619,104 +2624,104 @@ span.lessonsCourse {
   height: 37px;
 }
 
-/* line 1992, ../sass/style.scss */
+/* line 1995, ../sass/style.scss */
 #optionVideo .sharethis {
   padding-top: 0px;
 }
 
-/* line 1995, ../sass/style.scss */
+/* line 1998, ../sass/style.scss */
 .courseDescriptionWrapper {
   margin: 23px auto;
   width: 700px;
 }
 
-/* line 1999, ../sass/style.scss */
+/* line 2002, ../sass/style.scss */
 .courseDescriptionWrapper p {
   text-align: justify;
 }
 
-/* line 2002, ../sass/style.scss */
+/* line 2005, ../sass/style.scss */
 .courseDescriptionWrapper ul {
   color: #433a3a;
 }
 
-/* line 2005, ../sass/style.scss */
+/* line 2008, ../sass/style.scss */
 .stButton {
   margin-left: 0 !important;
 }
 
-/* line 2008, ../sass/style.scss */
+/* line 2011, ../sass/style.scss */
 .st_facebook_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/facebook_icon_white.png) no-repeat !important;
   width: 26px !important;
 }
 
-/* line 2012, ../sass/style.scss */
+/* line 2015, ../sass/style.scss */
 .st_twitter_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/twitter_icon_white.png) no-repeat !important;
   width: 39px !important;
 }
 
-/* line 2016, ../sass/style.scss */
+/* line 2019, ../sass/style.scss */
 .st_googleplus_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/googleplus_icon_white.png) no-repeat !important;
   width: 37px !important;
 }
 
-/* line 2020, ../sass/style.scss */
+/* line 2023, ../sass/style.scss */
 .st_email_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/email_icon_white.png) no-repeat !important;
   width: 34px !important;
 }
 
-/* line 2024, ../sass/style.scss */
+/* line 2027, ../sass/style.scss */
 .st_sharethis_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/social_media_icon_white.png) no-repeat !important;
   width: 37px !important;
 }
 
-/* line 2028, ../sass/style.scss */
+/* line 2031, ../sass/style.scss */
 .st_pinterest_large {
   display: none !important;
 }
 
-/* line 2031, ../sass/style.scss */
+/* line 2034, ../sass/style.scss */
 #courseDescription .st_facebook_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/facebook_icon.png) no-repeat !important;
   width: 26px !important;
 }
 
-/* line 2035, ../sass/style.scss */
+/* line 2038, ../sass/style.scss */
 #courseDescription .st_twitter_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/twitter_icon.png) no-repeat !important;
   width: 39px !important;
 }
 
-/* line 2039, ../sass/style.scss */
+/* line 2042, ../sass/style.scss */
 #courseDescription .st_googleplus_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/googleplus_icon.png) no-repeat !important;
   width: 37px !important;
 }
 
-/* line 2043, ../sass/style.scss */
+/* line 2046, ../sass/style.scss */
 #courseDescription .st_email_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/email_icon.png) no-repeat !important;
   width: 34px !important;
 }
 
-/* line 2047, ../sass/style.scss */
+/* line 2050, ../sass/style.scss */
 #courseDescription .st_sharethis_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/social_media_icon.png) no-repeat !important;
   width: 37px !important;
 }
 
 /***/
-/* line 2052, ../sass/style.scss */
+/* line 2055, ../sass/style.scss */
 div.jp-audio {
   margin: auto;
 }
 
-/* line 2055, ../sass/style.scss */
+/* line 2058, ../sass/style.scss */
 #classResources, .keywords {
   background: none repeat scroll 0 0 #ECECEC;
   float: left;
@@ -2725,13 +2730,13 @@ div.jp-audio {
   width: 560px;
 }
 
-/* line 2062, ../sass/style.scss */
+/* line 2065, ../sass/style.scss */
 .keywords:before {
   content: "Keywords : ";
   font-weight: bold;
 }
 
-/* line 2066, ../sass/style.scss */
+/* line 2069, ../sass/style.scss */
 .keywords {
   color: #9c1f19;
   margin-bottom: 20px;
@@ -2740,13 +2745,13 @@ div.jp-audio {
   font-size: 13px;
 }
 
-/* line 2074, ../sass/style.scss */
+/* line 2077, ../sass/style.scss */
 #classHighlights ul {
   padding-left: 15px;
   margin-top: 0px;
 }
 
-/* line 2078, ../sass/style.scss */
+/* line 2081, ../sass/style.scss */
 #classHighlights li {
   list-style: disc outside none;
   color: #433a3a;
@@ -2756,7 +2761,7 @@ div.jp-audio {
   margin-bottom: 3px;
 }
 
-/* line 2086, ../sass/style.scss */
+/* line 2089, ../sass/style.scss */
 .resourceTitle > a {
   color: #127795;
   font-weight: normal;
@@ -2767,7 +2772,7 @@ div.jp-audio {
   vertical-align: super;
 }
 
-/* line 2095, ../sass/style.scss */
+/* line 2098, ../sass/style.scss */
 .resourceFile {
   background-position: 0 0;
   margin-right: 14px;
@@ -2776,7 +2781,7 @@ div.jp-audio {
   width: 24px;
 }
 
-/* line 2102, ../sass/style.scss */
+/* line 2105, ../sass/style.scss */
 #classesDescription > p {
   color: #433a3a;
   font-size: 16px;
@@ -2786,19 +2791,19 @@ div.jp-audio {
   text-align: left;
 }
 
-/* line 2110, ../sass/style.scss */
+/* line 2113, ../sass/style.scss */
 .videocontent .sharethis {
   border-top: none;
 }
 
-/* line 2113, ../sass/style.scss */
+/* line 2116, ../sass/style.scss */
 .lessonCollectionSection .Audio {
   background: url("../images/icon/audio_icon_light_grey.png") no-repeat 8px 0;
   height: 13px;
   width: 25px;
 }
 
-/* line 2118, ../sass/style.scss */
+/* line 2121, ../sass/style.scss */
 .lessonCollectionSection tr:hover .Audio {
   background: url("http://cdn1.kabbalah.com/kabbalah.com/icons/audio_icon.png") no-repeat 8px 0;
   height: 13px;
@@ -2806,7 +2811,7 @@ div.jp-audio {
 }
 
 /**grid display***/
-/* line 2124, ../sass/style.scss */
+/* line 2127, ../sass/style.scss */
 #mainContentWrapper, #courseByParentWrapper {
   clear: both;
   margin: auto;
@@ -2815,7 +2820,7 @@ div.jp-audio {
   padding: 0 10px 40px;
 }
 
-/* line 2131, ../sass/style.scss */
+/* line 2134, ../sass/style.scss */
 .topicwrapper {
   float: left;
   cursor: pointer;
@@ -2824,12 +2829,12 @@ div.jp-audio {
   height: 170px;
 }
 
-/* line 2138, ../sass/style.scss */
+/* line 2141, ../sass/style.scss */
 .topicItemTitle {
   margin: 0 10px;
 }
 
-/* line 2141, ../sass/style.scss */
+/* line 2144, ../sass/style.scss */
 .topicItemTitle a {
   color: #433a3a !important;
   font-size: 15px;
@@ -2840,14 +2845,14 @@ div.jp-audio {
   width: inherit;
 }
 
-/* line 2150, ../sass/style.scss */
+/* line 2153, ../sass/style.scss */
 .topicTermnDate {
   font-size: 12px;
   margin: 0 10px;
   padding-bottom: 10px;
 }
 
-/* line 2155, ../sass/style.scss */
+/* line 2158, ../sass/style.scss */
 .topicItemText {
   color: #433a3a !important;
   display: block;
@@ -2857,13 +2862,13 @@ div.jp-audio {
   text-align: left;
 }
 
-/* line 2163, ../sass/style.scss */
+/* line 2166, ../sass/style.scss */
 .topicItemText span a {
   text-transform: capitalize;
   color: #127795;
 }
 
-/* line 2167, ../sass/style.scss */
+/* line 2170, ../sass/style.scss */
 .topicItemImage a {
   height: auto !important;
   text-decoration: none !important;
@@ -2871,7 +2876,7 @@ div.jp-audio {
   width: 300px;
 }
 
-/* line 2173, ../sass/style.scss */
+/* line 2176, ../sass/style.scss */
 .topicItemImage img {
   float: left;
   height: 170px;
@@ -2879,7 +2884,7 @@ div.jp-audio {
   z-index: -10;
 }
 
-/* line 2179, ../sass/style.scss */
+/* line 2182, ../sass/style.scss */
 .topicTextWrapper {
   background: url("../images/sliding_white_bg_3.png") repeat-x scroll 0 0 rgba(0, 0, 0, 0);
   float: left;
@@ -2888,12 +2893,12 @@ div.jp-audio {
   width: 300px;
 }
 
-/* line 2186, ../sass/style.scss */
+/* line 2189, ../sass/style.scss */
 .sticky-header {
   display: none !important;
 }
 
-/* line 2189, ../sass/style.scss */
+/* line 2192, ../sass/style.scss */
 #list img, #grid img {
   float: left;
   height: 16px;
@@ -2902,18 +2907,18 @@ div.jp-audio {
 }
 
 /**home page**/
-/* line 2198, ../sass/style.scss */
+/* line 2201, ../sass/style.scss */
 #carousal1Wrapper, #carousal2Wrapper, #carousal3Wrapper, #carousal4Wrapper {
   float: left;
   width: 100%;
 }
 
-/* line 2208, ../sass/style.scss */
+/* line 2211, ../sass/style.scss */
 #carousal4Wrapper {
   margin-bottom: 40px;
 }
 
-/* line 2215, ../sass/style.scss */
+/* line 2218, ../sass/style.scss */
 #block-ukabbalah-fp-carousals-carousal1 > h2,
 #block-ukabbalah-fp-carousals-carousal2 > h2,
 #block-ukabbalah-fp-carousals-carousal3 > h2,
@@ -2923,13 +2928,13 @@ div.jp-audio {
   color: #999;
 }
 
-/* line 2220, ../sass/style.scss */
+/* line 2223, ../sass/style.scss */
 .carrouselFix {
   margin-left: 10px;
   margin-bottom: 0;
 }
 
-/* line 2224, ../sass/style.scss */
+/* line 2227, ../sass/style.scss */
 .vidImg, .Videos, .theDescCont .Video, .Premium, .Basic, .audioImg, .Audios, .theDescCont .Audio, .bothAdVdImg, .Both {
   height: 13px;
   width: 16px;
@@ -2939,75 +2944,75 @@ div.jp-audio {
   background-position: 0 -1434px;
 }
 
-/* line 2238, ../sass/style.scss */
+/* line 2241, ../sass/style.scss */
 .Premium, .Basic {
   background-position: 0 -1455px;
   width: 11px;
   float: right;
 }
 
-/* line 2247, ../sass/style.scss */
+/* line 2250, ../sass/style.scss */
 .audioImg, .Audios, .theDescCont .Audio {
   background-position: 0 -1361px;
 }
 
-/* line 2257, ../sass/style.scss */
+/* line 2260, ../sass/style.scss */
 .bothAdVdImg, .Both {
   background-position: 0 -309px;
   width: 35px;
 }
 
-/* line 2265, ../sass/style.scss */
+/* line 2268, ../sass/style.scss */
 .teachingsTopicAndDate .Premium, .teachingsTopicAndDate .Basic {
   margin-right: 0;
   margin-top: 0;
 }
 
-/* line 2269, ../sass/style.scss */
+/* line 2272, ../sass/style.scss */
 .theTitle {
   float: left;
   margin-left: 10px;
 }
 
-/* line 2273, ../sass/style.scss */
+/* line 2276, ../sass/style.scss */
 .teachersPath, .readMore {
   color: #127795;
 }
 
-/* line 2276, ../sass/style.scss */
+/* line 2279, ../sass/style.scss */
 .rightArrowStyleHome {
   position: relative;
 }
 
 /***/
-/* line 2281, ../sass/style.scss */
+/* line 2284, ../sass/style.scss */
 #teachingsSectionHeaderBar .lessonsCourse {
   display: block;
 }
 
-/* line 2284, ../sass/style.scss */
+/* line 2287, ../sass/style.scss */
 #authorDDWrapper, #topicDDWrapper {
   float: left;
 }
 
-/* line 2287, ../sass/style.scss */
+/* line 2290, ../sass/style.scss */
 #teachings_teachersDD, #teachings_topicDD {
   cursor: pointer;
   height: 29px;
 }
 
-/* line 2291, ../sass/style.scss */
+/* line 2294, ../sass/style.scss */
 .preVideoImg {
   width: 940px;
   margin: 20px auto auto;
 }
 
-/* line 2295, ../sass/style.scss */
+/* line 2298, ../sass/style.scss */
 .preVideoImg img {
   float: left;
 }
 
-/* line 2298, ../sass/style.scss */
+/* line 2301, ../sass/style.scss */
 .preVideoImg .videotitles {
   float: right;
   width: 290px;
@@ -3016,7 +3021,7 @@ div.jp-audio {
   margin-top: 0;
 }
 
-/* line 2311, ../sass/style.scss */
+/* line 2314, ../sass/style.scss */
 .preVideoImg #titleMultimedia,
 .preVideoImg #courseNameMultimedia,
 .preVideoImg #pipe,
@@ -3029,46 +3034,46 @@ div.jp-audio {
   color: white;
 }
 
-/* line 2314, ../sass/style.scss */
+/* line 2317, ../sass/style.scss */
 .preVideoImg #wrapperInfoMultimedia, .preVideoImg #wrapperAuthorDate {
   width: 290px;
 }
 
-/* line 2317, ../sass/style.scss */
+/* line 2320, ../sass/style.scss */
 .preVideoImg #authorNameMultimedia, .preVideoImg #dateMultimedia {
   text-align: left;
 }
 
-/* line 2320, ../sass/style.scss */
+/* line 2323, ../sass/style.scss */
 .preVideoImg .pipe {
   display: none;
 }
 
-/* line 2323, ../sass/style.scss */
+/* line 2326, ../sass/style.scss */
 .preVideoImg #wrapperPrice {
   width: 275px;
   margin-left: 30px;
 }
 
-/* line 2327, ../sass/style.scss */
+/* line 2330, ../sass/style.scss */
 .preVideoImg .sharethis {
   float: right;
   width: 290px;
   margin-top: 16px;
 }
 
-/* line 2332, ../sass/style.scss */
+/* line 2335, ../sass/style.scss */
 .transcript-content {
   width: 605px;
 }
 
-/* line 2335, ../sass/style.scss */
+/* line 2338, ../sass/style.scss */
 .audioSection .preVideoImg img {
   width: 620px;
   height: 349px;
 }
 
-/* line 2339, ../sass/style.scss */
+/* line 2342, ../sass/style.scss */
 .bookmark {
   float: right;
   width: 140px;
@@ -3076,24 +3081,24 @@ div.jp-audio {
   font-size: 15px;
   text-align: right;
 }
-/* line 2345, ../sass/style.scss */
+/* line 2348, ../sass/style.scss */
 .bookmark a {
   color: #433a3a;
 }
 
-/* line 2349, ../sass/style.scss */
+/* line 2352, ../sass/style.scss */
 .flag-message {
   left: -169px !important;
   text-align: right;
 }
 
-/* line 2353, ../sass/style.scss */
+/* line 2356, ../sass/style.scss */
 .flag-wrapper {
   width: 140px;
 }
 
 /**start scrollling filter**/
-/* line 2357, ../sass/style.scss */
+/* line 2360, ../sass/style.scss */
 .scrollingTitle {
   background: #fff;
   position: fixed !important;
@@ -3106,18 +3111,18 @@ div.jp-audio {
 }
 
 @media only screen and (max-width: 1000px) {
-  /* line 2368, ../sass/style.scss */
+  /* line 2371, ../sass/style.scss */
   .scrollingTitle {
     padding-left: 20px !important;
   }
 }
 @media only screen and (min-width: 1000px) {
-  /* line 2373, ../sass/style.scss */
+  /* line 2376, ../sass/style.scss */
   .scrollingFilter {
     padding-left: 0px !important;
   }
 }
-/* line 2385, ../sass/style.scss */
+/* line 2388, ../sass/style.scss */
 .scrollingFilter, .scrollingTermDesc, .scrollingView-filters {
   background: url("../images/shadow_local_bar-1.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
   position: fixed !important;
@@ -3127,19 +3132,19 @@ div.jp-audio {
   z-index: 1400 !important;
 }
 
-/* line 2393, ../sass/style.scss */
+/* line 2396, ../sass/style.scss */
 .scrollingFilter {
   padding-bottom: 10px !important;
 }
 
-/* line 2396, ../sass/style.scss */
+/* line 2399, ../sass/style.scss */
 .teachingsBarInnerWrapper {
   max-width: 1580px;
   min-width: 940px;
   margin: auto;
 }
 
-/* line 2402, ../sass/style.scss */
+/* line 2405, ../sass/style.scss */
 .scrollingTitle .teachingsBarInnerWrapper,
 .scrollingFilter .teachingsBarInnerWrapper {
   width: auto !important;
