--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1835,6 +1835,9 @@ h3 {
     color: #127795;
     font-size: 14px;
 }
+.liveEventCollectionSection table td{
+  width: 450px;
+}
 .lessonCollectionSection table td.active{
     background: none;
 }
