--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1797,7 +1797,7 @@ h3 {
     background: url(http://cdn1.kabbalah.com/university/icons/cc_icon_light_grey.png) no-repeat 8px 9px;
     color: transparent;
 }
-.lessonCollectionSection tr:hover{
+.lessonCollectionSection tr:hover,{
 	font-weight: bold;
 	background: #e1edf1;
 		.Video{
@@ -1806,6 +1806,10 @@ h3 {
 		.views-field-twistage-subtitles span, .subtitle-width span{
      background: url(http://cdn1.kabbalah.com/university/icons/cc_icon_dark_grey.png) no-repeat 8px 9px;
       }
+}
+.liveEventCollectionSection tr:hover{
+  font-weight: bold;
+  background: #e1edf1;
 }
 .lessonCollectionSection table thead tr th.views-field-twistage-subtitles{
     background: none!important;
