--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1839,9 +1839,12 @@ h3 {
     color: #127795;
     font-size: 14px;
 }
-.liveEventCollectionSection table td,
-.liveEventCollectionSection table th:first{
+.liveEventCollectionSection table td{
   width: 430px;
+  padding-left:20px;
+}
+.liveEventCollectionSection table th{
+   width: 430px;
   padding-left:20px;
 }
 .lessonCollectionSection table td.active{
